--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="manifest.json">
     <title>PWA</title>
 </head>
 <body>
@@ -11,7 +13,7 @@
 </body>
 <script>
     if (navigator.serviceWorker != null) {
-        navigator.serviceWorker.register('./sw.js').then(function(registartion){
+        navigator.serviceWorker.register('/sw.js').then(function(registartion){
             console.log("支持sw",registartion.scope);
             
         })        
